# deadlink

./: pyproject.toml
.github/workflows/: test.yml
missions/: indoor_search_001.json
missions/invalid/: duplicate_agent_ids.json  grid_cell_mismatch.json  invalid_cell_size.json  invalid_policy_value.json  malformed.json  missing_required_field.json  unknown_assignment_agent.json  unknown_assignment_task.json  unknown_task_zone.json
src/deadlink/: __init__.py  __main__.py  cli.py  contracts.py
src/deadlink/core/: __init__.py  contract.py  coverage.py  events.py  state.py
src/deadlink/drivers/: __init__.py  runner.py  sim.py
src/deadlink/recorder/: __init__.py  jsonl.py
tests/: test_cli_run.py  test_cli_validate.py  test_contract.py  test_core_purity.py  test_coverage.py  test_events.py  test_exclusions.py  test_recorder_jsonl.py  test_reducer_fold.py  test_run_determinism.py  test_sim_run.py
