[project]
name = "deadlink"
version = "0.1.0"
description = "Deterministic mission recovery runtime for cheap drone teams"
requires-python = ">=3.12"
dependencies = [
  "msgspec>=0.19.0",
]

[project.scripts]
deadlink = "deadlink.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/deadlink"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
